# amsspf

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
config/: default.toml
merkel_calculator/: Cargo.toml  type_?.txt
merkel_calculator/src/: main.rs
proof_of_storage/1.mp4/: IDENTITY  LOG  OPTIONS-000005
proof_of_storage/2.txt/: IDENTITY  LOG  OPTIONS-000005
proof_of_storage/3.txt/: IDENTITY  LOG.old.1602835692775917  OPTIONS-000005
proof_of_storage/4.txt/: IDENTITY  LOG.old.1602835692866245  OPTIONS-000005
proof_of_storage/5.txt/: IDENTITY  LOG.old.1602835692856241  OPTIONS-000005
proof_of_storage/6.txt/: IDENTITY  LOG.old.1602835692826857  OPTIONS-000005
proof_of_storage/7.txt/: IDENTITY  LOG.old.1602835691573003  OPTIONS-000005
proof_of_storage/8.txt/: IDENTITY  LOG  OPTIONS-000005
proof_of_storage/type_a.txt/: IDENTITY  LOG  OPTIONS-000005
proof_of_storage/type_b.txt/: IDENTITY  LOG  OPTIONS-000005
proof_of_storage/type_c.txt/: IDENTITY  LOG  OPTIONS-000005
proof_of_storage/type_d.txt/: IDENTITY  LOG  OPTIONS-000005
proof_of_storage/type_e.txt/: IDENTITY  LOG  OPTIONS-000005
proof_of_storage/type_f.txt/: 000004.sst  IDENTITY  LOG.old.1602772419710166  LOG.old.1602772419721931  LOG.old.1602835654942293  LOG.old.1602835691538082  MANIFEST-000011  OPTIONS-000014
proof_of_storage/type_g.txt/: IDENTITY  LOG  OPTIONS-000005
proof_of_storage/type_z.txt/: IDENTITY  LOG  OPTIONS-000005
src/: lib.rs  main.rs  settings.rs
src/storage/: mod.rs
storage/: 4.txt  5.txt  6.txt  7.txt
tests/: test.rs
tests/build_tree/: build_tree.rs
(+23 files in other folders)
