[package]
name = "amsspf"
version = "0.1.0"
authors = ["obaranni <sashkamavashi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.1"
config = "0.9"
rocksdb = "0.15.0"
hex = "0.4.2"
serde_json = "1.0"
serde_derive = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.3"
arrayvec = "0.5.1"